# data-designer

./: .gitignore  AI-INTEGRATION-COMPLETE.md  CLAUDE.md  COMPLETE_TAXONOMY_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DATABASE_SETUP_MAC.md  DEBUGGING_GUIDE.md  DEBUG_UI_COMPONENTS.md  HTTP_GRPC_NAMING_CONSISTENCY.md  HTTP_GRPC_RECONCILIATION_ANALYSIS.md  HTTP_GRPC_RECONCILIATION_COMPLETE.md  IDE_TEST_RESULTS.md  LICENSE  LSP-WORKING.md  LSP_USAGE.md  Leptos.toml  MACOS_SEQUOIA_MEMORY_ISSUE.md  MAC_SETUP_CHECKLIST.md  MAKING_REPO_PUBLIC.md  README.md  README_TESTING.md  SCRIPTS.md  SECURITY.md  TAURI_LEPTOS_GUIDE.md  TESTING_STRATEGY.md  ai-context-server.py  ai-context.md  ai_llm_enhancement_schema.sql  ast-runtime-analysis.md  ast-setup.sh  attribute_classification_schema.sql  attribute_filtering_clustering_schema.sql  build.js  clean_functions.sh  commercial_taxonomy_schema.sql  compare-versions.md  config.toml  create_sample_investment_mandates.sql  data_dictionary.json  (+61 more)
cbu-dsl-lsp/: Cargo.toml
cbu-dsl-lsp/src/: lib.rs  main.rs
data-designer-core/: Cargo.toml
data-designer-core/schema/: comprehensive_dsl_schema.sql
data-designer-core/src/: capability_engine.rs  capability_execution_engine.rs  cbu_dsl.rs  cbu_dsl_integration_tests.rs  config.rs  deal_record_dsl.rs  dsl_utils.rs  embeddings.rs  engine.rs  evaluator.rs  kyc_dsl.rs  lib.rs  lisp_cbu_dsl.rs  lisp_dsl_database_integration_tests.rs  lisp_dsl_smoke_tests.rs  models.rs  onboarding_orchestrator.rs  onboarding_request_dsl.rs  opportunity_dsl.rs  orchestration_dsl.rs  parser.rs  resource_sheets.rs  runtime_orchestrator.rs  s_expression_round_trip_tests.rs  test_integration.rs  transpiler.rs
data-designer-core/src/db/: attributes.rs  data_dictionary.rs  grammar.rs  mod.rs  persistence.rs  products.rs  resource_sheets.rs  rules.rs  schema.rs
data-designer-core/tests/: simple_tests.rs
data-designer/data-designer-core/: Cargo.toml
data-designer/data-designer-core/src/: engine.rs  lib.rs  models.rs  schema_visualizer.rs  test_integration.rs
dsl-lsp/: Cargo.toml  README.md  build.sh
dsl-lsp/src/: ai_agent.rs  data_dictionary.rs  grammar_loader.rs  lib.rs  main.rs  websocket_server.rs
egui-frontend/: Cargo.toml
egui-frontend/data-designer-core/: Cargo.toml
egui-frontend/grpc-server/: Cargo.toml  build.rs
egui-frontend/grpc-server/src/: main.rs
egui-frontend/grpc-server/tests/: grpc_integration_tests.rs
egui-frontend/proto/: financial_taxonomy.proto
egui-frontend/shared-components/: Cargo.toml  build.rs
egui-frontend/shared-components/src/: grpc_client.rs  lib.rs  ui_components.rs
egui-frontend/src/: ai_assistant.rs  code_editor.rs  main.rs  main.rs.backup
egui-frontend/src/db/: ai_attribute_service.rs  config_driven.rs  grammar.rs  mod.rs
egui-frontend/test_data/: source_attributes.json
grpc-server/: Cargo.toml
grpc-server/src/: lib.rs  main.rs  template_api.rs
grpc-server/tests/: cbu_dsl_integration_test.rs  grpc_integration_tests.rs  smoke_tests.rs
onboarding/: Cargo.toml
onboarding-cli/: Cargo.toml
onboarding-cli/src/: main.rs
onboarding-ui/: Cargo.toml  PANIC_SAFETY.md  README.md  build-web.sh  serve-web.sh
onboarding-ui/src/: app.rs  http_client.rs  lib.rs  main.rs  state_manager.rs  wasm_utils.rs
onboarding-ui/src/onboarding/: actions.rs  client.rs  manager.rs  mod.rs  state.rs  tests.rs
onboarding-ui/src/ui/: mod.rs
onboarding/metadata/: cbu_templates.yaml  product_catalog.yaml
onboarding/metadata/resource_dicts/: accounting-engine.v2.yaml  custody-core.v1.yaml  distribution-engine.v1.yaml  fx-execution.v1.yaml  fx-pricing-engine.v1.yaml  order-management.v2.yaml  registry-system.v1.yaml  reporting-module.v1.yaml  swift-gateway.v2.yaml  trade-router.v2.yaml  trading-system.v4.yaml
onboarding/metadata/rules/: choose-gaap.cue
onboarding/src/: api.rs  lib.rs  persistence.rs
onboarding/src/ast/: lifecycle.rs  mod.rs  oodl.rs
onboarding/src/ir/: bindings.rs  dag.rs  idd.rs  mod.rs
onboarding/src/meta/: cbu_templates.rs  loader.rs  mod.rs  product_catalog.rs  resource_dict.rs  rules.rs
onboarding/src/planner/: compile.rs  mod.rs  validate.rs
onboarding/src/runtime/: mod.rs  scheduler.rs  solicit.rs
onboarding/src/runtime/adapters/: http.rs  (+1 more)
onboarding/src/util/: errors.rs  types.rs
src-tauri/: .env.example  Cargo.toml  my_rules.rules  tauri.conf.json
src-tauri/.sqlx/: query-08d178e2ad3ef626ed821b046556fc088a8c4bfd6e6854c61a0825c51fd83a38.json  query-147bbc50bedb2207c558412b7f19cde5d461bc2c897f2f0e48ffce4d3119f931.json  query-4c9ba167b703187bf084ab1ed696bda7a3c90aa32f30b87d56b07ea81bc87622.json  query-861cbb2d54d4cc1a25a1b0975c1dd18a0b38491fd0828cf27a688033d6168a5f.json  query-ce49a91ed2fdae3cde007cfb0c9a29fbab50238b7e36cc2c787cada54917d68e.json  query-ff76167ada726f5c428f8b4b665ffe6467d31644d199356b46e652c1b3551619.json
src-tauri/assets/: app.css  monaco-init.js
src-tauri/src/: config.rs  data_dictionary.rs  database.rs  embeddings.rs  lib.rs  main.rs  schema_visualizer.rs  web_server_minimal.rs
src-tauri/src/db/: attributes.rs  cbu.rs  config_driven.rs  mod.rs  persistence.rs  products.rs  rules.rs
template-server/: Cargo.toml
template-server/src/: logging.rs  main.rs
test-libs/test-harness/: Cargo.toml
test-libs/test-harness/src/: database.rs  elasticsearch.rs  fixtures.rs  grpc_testing.rs  lib.rs  trace.rs
tests/: Cargo.toml  lib.rs  parser_tests.rs  regex_tests.rs
tests/e2e/: complete_pipeline_test.rs
web-ui/: Cargo.toml  build-web.sh  build.rs  master_attributes.json  serve-web.sh
web-ui/src/: app.rs  attribute_autocomplete.rs  attribute_palette.rs  call_tracer.rs  capability_ui.rs  cbu_dsl_ide.rs  cbu_state_manager.rs  code_editor.rs  data_designer.rs  debug_ui.rs  dsl_state_manager.rs  dsl_syntax_highlighter.rs  dsl_syntax_test.rs  entity_management.rs  grpc_client.rs  http_api_client.rs  lib.rs  main.rs  minimal_types.rs  onboarding_ide.rs  onboarding_state_manager.rs  resource_dsl_ide.rs  resource_sheet_ui.rs  resource_state_manager.rs  template_designer.rs  template_editor.rs  wasm_utils.rs  workflow_dsl.ebnf
(+117 files in other folders)
