[workspace]
members = [
    "data-designer-core",
    "egui-frontend",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
fasteval = "0.2"
petgraph = "0.6"
ndarray = "0.15"
regex = "1"
nom = "7"
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.10"
fastrand = "2.0"
