[package]
name = "data-designer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
fasteval.workspace = true
petgraph.workspace = true
ndarray.workspace = true
regex.workspace = true
nom.workspace = true

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
futures = "0.3"

# Additional missing dependencies
async-trait = "0.1"
rust_decimal = { version = "1.0", features = ["serde", "db-tokio-postgres"] }
log = "0.4"
toml = "0.8"
