[package]
name = "dsl-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ropey = "1.6"
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
nom = "7.1"
regex = "1.10"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = "0.21"

# Use the parent data_designer library for parser
data_designer = { path = ".." }

[[bin]]
name = "dsl-lsp-server"
path = "src/main.rs"

[lib]
name = "dsl_lsp"
path = "src/lib.rs"
