[package]
name = "data-designer-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core library with database support
data-designer-core = { path = "../data-designer-core" }

# egui ecosystem
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "persistence"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async
futures = "0.3"

# Text processing
regex = "1.0"

# Configuration
toml = "0.8"

# Optional: for syntax highlighting in code editor
syntect = { version = "5.0", optional = true }

[[bin]]
name = "data-designer-egui"
path = "src/main.rs"

[features]
default = []
syntax-highlighting = ["syntect"]

# Optimize for smaller binary size in release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
