[package]
name = "financial-taxonomy-grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.0", features = ["serde"] }

# Async
futures = "0.3"

# HTTP client for AI API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# HTTP server for REST API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Secure keychain storage
keyring = "2.0"

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Core library
data-designer-core = { path = "../data-designer-core" }
onboarding = { path = "../onboarding" }

# YAML parsing
serde_yaml = "0.9"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "grpc-server"
path = "src/main.rs"