[package]
name = "onboarding-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
onboarding = { path = "../onboarding" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
