[package]
name = "onboarding-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "onboarding-desktop"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wgpu",
] }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = "0.4"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
# WASM-compatible tokio features only
tokio = { version = "1.48", features = ["macros", "rt", "time"], default-features = false, optional = true }

# Desktop-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Desktop tokio with full features
tokio = { version = "1.48", features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }

[features]
default = ["tokio"]
wasm = []

[profile.release]
opt-level = 2
lto = true

[profile.dev]
opt-level = 1
