[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

# Test binaries
[[bin]]
name = "leptos_test"
path = "src/bin/leptos_test.rs"

[[bin]]
name = "test_minimal"
path = "src/bin/test_minimal.rs"

[features]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum/default",
]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
data_designer = { path = ".." }
data-designer-core = { path = "../data-designer/data-designer-core" }
rhai = "1.17"

# Database dependencies
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = "1.0"

# Embedding dependencies
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.18"
rand = "0.8"

# Leptos SSR dependencies
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6", features = ["ssr"] }
leptos_router = { version = "0.6", features = ["ssr"] }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
