[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"


[features]
# Desktop-only features
default = []

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
data_designer = { path = ".." }
data-designer-core = { path = "../data-designer/data-designer-core" }
rhai = "1.17"

# Database dependencies
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "rust_decimal"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }

# Embedding dependencies
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.18"
rand = "0.8"

# Persistence layer dependencies
async-trait = "0.1"

# Configuration dependencies
toml = "0.8"
ts-rs = { version = "10.1.0", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }
dotenvy = "0.15"

# Pure desktop application - no web dependencies needed
