[package]
name = "data-designer-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "lib.rs"

[dependencies]
# Test framework
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"

# Test harness
test-harness = { path = "../test-libs/test-harness" }

# Core dependencies
data-designer-core = { path = "../data-designer-core" }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }

# gRPC testing
tonic = "0.12"

# UUID for test IDs
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"