[package]
name = "data-designer-web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

# No build dependencies needed for HTTP approach

# Getrandom patch moved to workspace root

[dependencies]
# Note: Core library disabled for WASM - using minimal types instead
# data-designer-core = { path = "../data-designer-core" }

# egui ecosystem for web
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "web_screen_reader",
    "persistence",
    "glow",
] }

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific getrandom fix
getrandom = { version = "0.2", features = ["js"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging for web
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"

# HTTP client for WASM
reqwest = { version = "0.11", default-features = false, features = ["json"] }

# For future use with gRPC-web
tonic-web = { version = "0.10", optional = true }
prost = "0.12"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Window",
  "Location",
  "History",
  "Storage",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
]