[package]
name = "financial-taxonomy-shared-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC client
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Core egui for shared UI components
egui = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.0", features = ["serde"] }

# Logging
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "financial_taxonomy_shared_ui"
path = "src/lib.rs"